Rebase with squash with multi module branch